--- a/mysite/register/templates/register/register.html
+++ b/mysite/register/templates/register/register.html
@@ -8,7 +8,7 @@
 	<div class="content-section">
 		<form method="POST" class="form-group">
 			{% csrf_token %}
-			<legend class="border-bottom mb-3">Create an Account</legend>
+			<legend class="border-bottom mb-3">Create an Account HERE</legend>
 			{{form|crispy}}
 			<button name="create", type="submit", class="btn btn-success">Register</button>
 		</form>
