--- a/mysite/register/templates/registration/login.html
+++ b/mysite/register/templates/registration/login.html
@@ -10,7 +10,7 @@
 		<form method="POST" class="form-group">
 			{% csrf_token %}
 			{{form|crispy}}
-			<button type="submit" class="btn btn-success">Login</button>
+			<button type="submit" class="btn btn-success">Login Here</button>
 		</form>
 	</div>
 {% endblock %}
