--- a/templates/home.html
+++ b/templates/home.html
@@ -59,13 +59,13 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
-                  <a class="nav-link" href="about.html"> Products </a>
+                  <a class="nav-link" href="{% url 'products' %}"> Products </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="how.html"> Events </a>
+                  <a class="nav-link" href="{% url 'event' %}"> Events </a>
                 </li>
               
                 <li class="nav-item">
@@ -395,7 +395,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          About Ishyiga
+          PARTERNERS
         </h2>
       </div>
        <div class="box">
@@ -404,13 +404,15 @@
         </div>
         <div class="detail-box">
           <p>
-            I've been living fast life but i am see it in slow motion and you see my lifestyle i got GS in troubles!
-              I see many people outside are feeling my zobos
-              Standing defend like algorithm eeeeeeeeeeeehhhhhhhh band guy want to flex and chill
+            &nbsp;&nbsp;IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII</br>
+            &nbsp;&nbsp;SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS&nbsp;&nbsp;</br>
+            &nbsp;&nbsp;hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh<br>
+            yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy<br>
+            iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii<br>
+            &nbsp;&nbsp;ggggggggggggggggggggggggggggggggggggggggggggggggggggg &nbsp;&nbsp;<br>
+            aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 
-              I've been living fast life but i am see it in slow motion and you see my lifestyle i got GS in troubles!
-              I see many people outside are feeling my zobos
-              Standing defend like algorithm eeeeeeeeeeeehhhhhhhh band guy want to flex and chill
+
           </p>
           <div class="btn-box">
             <a href="">
@@ -423,7 +425,7 @@
 
     
   </section>
-  <section class="about_section layout_padding-bottom">
+  {% comment %} <section class="about_section layout_padding-bottom">
     <div class="container">
       <div class="heading_container">
         <h2>
@@ -486,7 +488,7 @@
     </div>
 
     
-  </section>
+  </section> {% endcomment %}
   <!-- end about section -->
 
   <!-- app section -->
@@ -682,9 +684,11 @@
               THINGS TO CONSIDER
             </h5>
             <p>
-              I've been living fast life but i am see it in slow motion and you see my lifestyle i got GS in troubles!
-              I see many people outside are feeling my zobos
-              Standing defend like algorithm eeeeeeeeeeeehhhhhhhh band guy want to flex and chill 
+              Did you know that you can save alot of money through working with us?</br>
+              Ishyiga is here to cover your business integrity and business management.</br>
+              Invest ishyiga Software 
+              
+
 
             </p>
           </div>
